--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="header-container" >
+    <div class="logo">JUN AUTO</div>
+    <div class="nav-container">
+        <div class="nav" >
+            <div class="nav-item">Home</div>
+            <div class="nav-item">Company</div>
+            <div class="nav-item">Technology</div>
+        </div>
+        <div class="nav-mobile">
+            <mat-icon>menu</mat-icon>
+        </div>
+    </div>
+</div>
