--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 .main{
     display: flex;
     max-width: 1800px;
-    margin: 11px auto;
+    margin: 0px auto;
     flex-direction: column;
-    padding: 7px 30px;
+    padding: 30px 30px;
+    background-color: white;
 }
