--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,11 +2,11 @@
     <div class="header">
         <app-header></app-header>
     </div>
-    <div class="body-container">
+    <!-- <div class="body-container">
         body content
     </div>
     <div class="footer">
         <app-footer></app-footer>
-    </div>
+    </div> -->
 </div>
 
