--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,9 @@
     <div class="logo">JUN AUTO</div>
     <div class="nav-container">
         <div class="nav" >
-            <div class="nav-item">Home</div>
-            <div class="nav-item">Company</div>
-            <div class="nav-item">Technology</div>
+            <div class="nav-item" [ngClass]="{selected: selected=='home'}"  (click)="navto('Home')" >Home</div>
+            <div class="nav-item" (click)="navto('Company')" [ngClass]="{selected: selected=='company'}"  >Company</div>
+            <div class="nav-item" (click)="navto('Technology')" [ngClass]="{selected: selected=='technology'}" >Technology</div>
         </div>
         <div class="nav-mobile">
             <mat-icon>menu</mat-icon>
