--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -28,6 +28,19 @@
 .nav-mobile{
     display: none;
 }
+.nav-item{
+    padding: 5px 10px;
+}
+.selected{
+    background-color: #2cb5bf;
+    color: white;
+    border-radius: 5px;
+    pointer-events: none;
+}
+.nav-item:hover{
+    color: #2cb5bf;
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 600px) {
     .nav{
