--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,10 +2,10 @@
     <div class="header">
         <app-header></app-header>
     </div>
-    <!-- <div class="body-container">
-        body content
+    <div class="body-container">
+        <router-outlet></router-outlet>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <app-footer></app-footer>
     </div> -->
 </div>
