--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 30px;
+    background-color: #f5f5f5;
 }
 .nav{
     display: flex;
