--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="home-container">
+    <div class="slide-show-container">
+        <div id="slide1" class="slide1 slide">
+            <div class="logo">JUN AUTO</div>
+        </div>
+        <!-- <div class="slide2 slide">
+
+        </div>
+        <div class="slide3 slide">
+
+        </div> -->
+        
+    </div>
+    <div class="company-container">
+
+    </div>
+    <div class="technology-container">
+
+    </div>
+
+</div>
