header and footer changes

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,49 @@
-<p>footer works!</p>
+<div class="footer-container p30">
+    <div class="footer-inner">
+        <div class="address-container">
+            <div class="ofline-address">
+                <div class="anime-image">
+                    <div class="img">
+                        img
+                    </div>
+                </div>
+                <div class="address">
+                    <div class="company-name">Jun Automotive India Pvt Ltd.</div>
+                    <div class="address-line" > No: 124, Eriyoor Road, Vallam Village,</div>
+                    <div class="address-line">Sriperumbadur Taluk,</div>
+                    <div class="address-line">Kancheepuram District,</div>
+                    <div class="address-line"> Tamil Nadu, 602105 </div>
+                    
+                </div>
+            </div>
+            <div class="online-address">
+                <div class="img1 followuson">
+                    <div class="img">
+                        in
+                    </div>
+                </div>
+                <div class="img2 followuson">
+                    <div class="img">
+                        f
+                    </div>
+                </div>
+                <div class="img3 followuson">
+                    <div class="img">
+                        x
+                    </div>
+                </div>
+                <div class="img3 followuson">
+                    <div class="img">
+                        YT
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="gmap-container">
+            <div class="gmap">
+                map
+            </div>
+        </div>
+    </div>
+</div>
