--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container" >
-    <div class="logo">JUN AUTO</div>
+    <div class="logo" (click)="navToHome()" >JUN AUTO</div>
     <div class="nav-container">
         <div class="nav" >
             <div class="nav-item" [ngClass]="{selected: selected=='home'}"  (click)="navto('Home')" >Home</div>
