--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,6 +4,10 @@
     align-items: center;
     padding: 30px;
     background-color: #f5f5f5;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    z-index: 10;
 }
 .nav{
     display: flex;
@@ -21,6 +25,7 @@
     border-top-color: #2cb5bf;
     border-bottom: 3px solid;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .nav{
