--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -30,3 +30,122 @@
     animation: animate__slideOutRight;
     animation-duration: 2s;
 }
+.company-container .inner-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+.animation-container .img{
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    background-color: lightgray;
+    height: 100px;
+    align-items: center;
+}
+.p30{
+    padding: 60px 30px;
+}
+.company{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+.comp-child-container{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.company .heading, .tech-right .heading{
+    font-size: 38px;
+    font-weight: 400;
+    line-height: 42px;
+}
+.content{
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 10px;
+}
+.nav-button{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+.btn{
+    font-size: 15px;
+    font-weight: 500;
+    background-color: #2cb5bf;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.company-container{
+    border-top: 2px solid #f5f5f5;
+}
+.technology-container .inner-container{
+    display: flex;
+    gap: 30px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.tech-left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.comp-left{
+    border-right: 2px solid #efefed;
+    width: 46%;
+}
+.comp-child-container .comp-right{
+    width: 46%;
+}
+.tech-left{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48%;
+}
+.tech-right{
+    width: 50%;
+    text-align: center;
+}
+.technology-container.p30{
+    padding: 100px 30px;
+    position: relative;
+    overflow: hidden;
+}
+.tech-absolute{
+    position: absolute;
+    background-color: #2cb5bf;
+    top: -67px;
+    left: -122px;
+    width: 47%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+.tech-absolute .anime-image{
+    display: flex;
+    width: 100px;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    background-color: #2cb5bf;
+    opacity: 0.5;
+    border: 1px solid green;
+}
+
+.technology-container .heading{
+    text-align: center;
+}
