--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,8 +5,8 @@
     <div class="body-container">
         <router-outlet></router-outlet>
     </div>
-    <!-- <div class="footer">
+    <div class="footer">
         <app-footer></app-footer>
-    </div> -->
+    </div>
 </div>
 
