--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="ofline-address">
                 <div class="anime-image">
                     <div class="img">
-                        img
+                        
                     </div>
                 </div>
                 <div class="address">
@@ -42,7 +42,11 @@
         </div>
         <div class="gmap-container">
             <div class="gmap">
-                map
+                <div class="mapouter">
+                    <div class="gmap_canvas">
+                        <iframe src="https://maps.google.com/maps?q=jun%20automative%20&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 590px; height: 250px;"></iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
