--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -61,7 +61,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: lightblue;
     width: 80%;
-    height: 300px;
 }
+
+.mapouter{position:relative;height:250px;width:590px;background:#fff;} .maprouter a{color:#fff !important;position:absolute !important;top:0 !important;z-index:0 !important;}
+.gmap_canvas{overflow:hidden;height:250px;width:590px}.gmap_canvas iframe{position:relative;z-index:2}
