home page animation

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,22 +19,22 @@
             <div class="online-address">
                 <div class="img1 followuson">
                     <div class="img">
-                        in
+                        <img src="../../assets/images/insta.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="img2 followuson">
                     <div class="img">
-                        f
+                        <img src="../../assets/images/fb.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="img3 followuson">
                     <div class="img">
-                        x
+                        <img src="../../assets/images/twitter.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="img3 followuson">
                     <div class="img">
-                        YT
+                        <img src="../../assets/images/linkedin.png" alt="" srcset="">
                     </div>
                 </div>
             </div>
