--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,16 @@
 <div class="home-container ">
-    <div class="slide-show-container" style="background-color: rebeccapurple;">
+    <div class="slide-show-container" style="background-color: rebeccapurple; position: relative;">
         <div id="slide1" style="background-color: #fff;" class="slide1 slide p30">
             <div class="logo">JUN AUTO</div>
         </div>
-        <div class="slide2 slide p30" style="display: none;">
+        <div id="slide2" class="slide2 slide p30" style="display: none; background-color: black;">
 
         </div>
-        <div class="slide3 slide p30" style="display: none;">
+        <div id="slide3" class="slide3 slide p30" style="display: none;background-color: #2cb5bf;">
 
+        </div>
+        <div *ngIf="showQuote" class="slide3 slide p30">
+            <h1 class="quoted" >"Parts crafted for excellence, elevating driving satisfaction."</h1>
         </div>
         
     </div>
@@ -50,7 +53,7 @@
         <div class="inner-container">
             <div class="tech-left">
                 <div class="tech-img">
-                    img
+                    
                 </div>
             </div>
             <div class="tech-right">
