home page responsive

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,8 +3,8 @@
         <div class="address-container">
             <div class="ofline-address">
                 <div class="anime-image">
-                    <div class="img">
-                        
+                    <div>
+                        <lottie-player class="refwid_box_1_img" src="../../assets/images/anime/car-anime.json"  background="transparent"  speed="1" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
                     </div>
                 </div>
                 <div class="address">
@@ -44,7 +44,7 @@
             <div class="gmap">
                 <div class="mapouter">
                     <div class="gmap_canvas">
-                        <iframe src="https://maps.google.com/maps?q=jun%20automative%20&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 590px; height: 250px;"></iframe>
+                        <iframe src="https://maps.google.com/maps?q=jun%20automative%20&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" class="google-map-iframe"></iframe>
                     </div>
                 </div>
             </div>
