--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
 }
 .body-container{
-    margin: 30px 0px;
-    margin-top: 119px;
+    margin: 2px 0px;
+    margin-top: 0px;
+}
+.tech-lottie{
+    width: 300px;
+    height: 300px;
 }
