--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -15,6 +15,8 @@
 }
 .gmap-container{
     width: 54%;
+    display: flex;
+    justify-content: center;
 }
 .address-container{
     display: flex;
@@ -72,4 +74,46 @@
 }
 img{
     width: 100%;
+}
+.google-map-iframe{
+    width: 590px;
+    height: 250px;
+}
+
+@media screen and (max-width: 1100px) {
+    .ofline-address{
+        flex-direction: column;
+        gap: 0px;
+    }
+    .online-address{
+        justify-content: center;
+    }
+    .gmap_canvas{
+        width: auto;
+        height: auto;
+    }
+    .google-map-iframe{
+        width: 100%;
+        height: 250px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .footer-inner{
+        flex-direction: column;
+    }
+    .gmap-container{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 550px) {
+    .address-container{
+        width: 100%;
+    }
+    .google-map-iframe{
+        min-width: 250px;
+        height: 250px;
+    }
+    .p30{
+        padding: 10px;
+    }
 }
