--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 14px 30px;
     background-color: #f5f5f5;
-    position: fixed;
-    width: 100%;
+    // position: fixed;
+    // width: 100%;
     top: 0px;
     z-index: 10;
 }
@@ -40,7 +40,7 @@
 }
 .selected{
     background-color: #2cb5bf;
-    color: white;
+    color: white !important;
     border-radius: 5px;
     pointer-events: none;
 }
@@ -48,8 +48,31 @@
     color: #2cb5bf;
     cursor: pointer;
 }
+.nav-mobile-menu{
+    display: none;
+    position: absolute;
+    z-index: 10;
+    background-color: #fff;
+    width: 44%;
+    right: -53%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding: 30px;
+    z-index: 10;
+    top: 84px;
+}
+.mobile-nav-overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 10;
+    opacity: 0.6;
+}
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 680px) {
     .nav{
         display: none;
     }
@@ -57,4 +80,12 @@
         display: flex;
         justify-content: flex-end;
     }
-  }
+    .nav-item{
+        width: 50%;
+        text-align: center;
+        box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.2);
+    }
+}
+@media only screen and (max-width: 370px) {
+   .nav-mobile-menu{width: 85%;}
+}
