company about us section

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,1 +1,35 @@
-<p>company works!</p>
+<div class="company-tab-main-container">
+
+    <section class="about-us" style="position: relative;">
+        <div class="background-overlay"></div>
+        <div class="about-us-heading">
+            <div class="inner-heading-content">
+                <div class="line">Who</div>
+                <div class="line">We</div>
+                <div class="line">Are</div>
+            </div>
+        </div>
+        <div class="inner-container">
+            <div class="about-us-detail">
+                <div class="about-us-detail-inner">
+                    <div>
+                        <span class="firs-word">Jun </span>Automotive is an established company in the Development and Manufacturer for Automotive Seating & Interior Components.
+                    </div>
+                    <div>
+                        <span class="firs-word">Cutting, </span>Sewing and Assembly for Automotive components parts Supply to various Automotive OEM applications.
+                    </div>
+                    <div>
+                        <span class="firs-word">Jun </span> modern and systematic manufacturing and management approaches.
+                    </div>
+                    <div>
+                        <span class="firs-word">Uses </span>We occupy an area of Land 37000 Sq. ft. and our manufacturing factory is fully equipped with technical equipment and machines.
+                    </div>
+                    <div>
+                        <span class="firs-word">Jun </span>Automotive has been accredited ISO 9001: 2015 and IATF 16949:2016 certification done on Mar-2021 through TUV (SUD) and certified on 15.08.2020 and OHSAS 18001 is on progress.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</div>
