--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -31,5 +31,164 @@
             </div>
         </div>
     </section>
+    <section class="aim-container">
+        <div class="aim-inner-container">
+            <div class="aim-header" >
+                <div class="aim-heading">
+                    Leading With Aim
+                </div>
+                <div class="aim-heading-description">
+                    Our leaders bring unprecedented experience as they guide the company toward the future 
+                    of mobility with an unwavering commitment to profitable growth, maintaining a strong culture and delivering 
+                    value for our shareholders.
+                </div>
+            </div>
+            
+            <div class="board-members-container">
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Parthiban
+                        </div>
+                        <div class="person-position">
+                            (Managing Director)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Hen
+                        </div>
+                        <div class="person-position">
+                            (Director / Marketing)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Sambath
+                        </div>
+                        <div class="person-position">
+                            (Plant Operations)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Premkumar
+                        </div>
+                        <div class="person-position">
+                            (CA - Auditor)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Suthakumar
+                        </div>
+                        <div class="person-position">
+                            (Finance & Accounts)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Senthil
+                        </div>
+                        <div class="person-position">
+                            (Production)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Ruban
+                        </div>
+                        <div class="person-position">
+                            (Quality)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Suresh
+                        </div>
+                        <div class="person-position">
+                            (Logistics)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Vignesh
+                        </div>
+                        <div class="person-position">
+                            (Stores)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card-img">img
+                        <div class="card-overlay"></div>
+                    </div>
+                    
+                    <div class="card-detail-container">
+                        <div class="person-name">
+                            Mr. Venkatesh
+                        </div>
+                        <div class="person-position">
+                            (HRM)
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            
+        </div>
+    </section>
 
 </div>
