fixed the slider desing issue

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,18 @@
 <div class="home-container ">
-    <div class="slide-show-container" style="position: relative;">
-        <div id="slide1" style="background-color: #fff;" class="slide1 slide p30">
+    <div class="slid-show-container">
+        <div class="slide1 slide">
             <div class="logo">JUN AUTO</div>
         </div>
-        <div id="slide2" class="slide2 slide p30" style="display: none; background-color: black;">
-
+        <div class="slide2 slide">
+          
         </div>
-        <div id="slide3" class="slide3 slide p30" style="display: none;background-color: #2cb5bf;">
-
+        <div class="slide3 slide">
+          
         </div>
-        <div class="slide slide-overlay"></div>
-        <div *ngIf="showQuote" class="slide3 slide p30">
+        <div class="slide-overlay"></div>
+        <div class="slide4 p30">
             <h1 class="quoted" >"Parts crafted for excellence, elevating driving satisfaction."</h1>
         </div>
-        
     </div>
     <div class="company-container p30">
             <div class="inner-container">
