company section issue fixes

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -190,5 +190,15 @@
             
         </div>
     </section>
+    <section class="cpcs-container" >
+        <div class="cpcs-inner-container">
+            <div class="section-nav-container">
+                <div class="nav-btn" >Clients</div>
+                <div class="nav-btn" >Products</div>
+                <div class="nav-btn" >Certification</div>
+                <div class="nav-btn" >Strengths</div>
+            </div>
+        </div>
+    </section>
 
 </div>
