--- a/src/app/company/company.component.scss
+++ b/src/app/company/company.component.scss
@@ -106,7 +106,8 @@
     padding: 5px;
 }
 .card-detail-container{
-    // display: flex;
+    display: flex;
+    background-color: #fff;
     flex-direction: column;
     align-items: center;
     width: 100%;
@@ -116,8 +117,7 @@
     font-weight: 500;
     border-top: 1px solid lightgrey;
     padding: 5px 0px;
-    display: none;
-    height: 0px;
+    height: auto;
     overflow: hidden;
    
 }
@@ -131,13 +131,19 @@
     align-items: center;
     border-radius: 8px;
 }
-.card-container:hover .card-detail-container{
-    display: flex;
+.person-position{
+    height: 0px;
+    overflow: hidden;
+}
+.card-container:hover .person-position{
     background-color: #fff;
     animation-name: card-detail;
     animation-duration: 0.5s;
     // animation-iteration-count: 1;
     animation-fill-mode: forwards;
+}
+.aim-container{
+    border-bottom: 1px solid #d0c5c5;
 }
 
 @keyframes card-detail {
@@ -146,7 +152,7 @@
     }
 
     to {
-        height: 51PX;
+        height: 25px;
     }
 }
 
@@ -164,3 +170,41 @@
     opacity: 0.4;
     display: none;
 }
+.cpcs-inner-container{
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.section-nav-container{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.nav-btn{
+    padding: 5px 20px;
+    min-width: 60px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.1);
+}
+.nav-btn:hover{ 
+    box-shadow: 0 0 8px 2px rgba(44, 181, 191, 0.3);
+}
+
+@media screen and (max-width:1080px){
+    .board-members-container{
+        max-width: 95%;
+    }
+ }
+
+ @media screen and (max-width:580px){
+    .board-members-container{
+        max-width: 100%;
+        gap: 16px;
+    }
+    .aim-header{
+        width: 100%;
+    }
+ }
